test/tests/errors/error-record-withdo-non-record.sm
// true
// false
/**/
/**/

program {
    var person = "Tim";
    with person do
        output 1;
}